--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Mr. Roboger's Neighborhood</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Mr. Roboger's Neighborhood</h1>
+    <p>Input a number here to get a little message from Mr. Roboger!</p>
+
+    <form id="numero">
+      <div class="form-group">
+        <label for="number">Input a number</label>
+        <input id="number" type="text" class="form-control">
+
+        <button type="submit" class="btn-primary">What's good Roboger!?</button>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
