add code to pass first test

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         <label for="number">Input a number</label>
         <input id="number" type="text" class="form-control">
 
-        <button type="submit" class="btn-primary">What's good Roboger!?</button>
+        <button type="submit" class="btn-primary">Roboger Me</button>
       </div>
     </form>
+
+    <div id="results">
+
+    </div>
   </div>
 </body>
 </html>
